2025-08-23T01:58:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17169780654 # 744
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 233 267 / 235 269
* notice: next accum: outdated-unq outdated-all / unq all: 234 268 / 236 270
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-08] / [2025-08-22]

2025-08-22T02:02:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17143987703 # 743
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 233 267 / 234 268
* notice: next accum: outdated-unq outdated-all / unq all: 233 267 / 235 269
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-17]

2025-08-09T02:10:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16844215895 # 730
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-09
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 232 266 / 233 267
* notice: next accum: outdated-unq outdated-all / unq all: 233 267 / 234 268
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-03] / [2025-08-08]

2025-07-04T02:09:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16064302034 # 694