@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-23T01:58:07Z",
+  "timestamp" : "2025-08-25T02:07:42Z",
   "count_outdated" : 268,
   "uniques_outdated" : 234,
-  "count" : 270,
-  "uniques" : 236,
+  "count" : 271,
+  "uniques" : 237,
   "clones" : [
     {
       "timestamp": "2025-08-17T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
